--- a/docutils.conf
+++ b/docutils.conf
@@ -15,7 +15,7 @@ template: sep-html-template
 embed-stylesheet: 0
 
 # path to PEPs, for template:
-sep-home: /seps/
+sep-home: https://github.com/AuburnSPaRC/SEP/blob/master
 
 # base URL for PEP references (no host so mirrors work):
-pep-base-url: /seps/
+pep-base-url: https://github.com/AuburnSPaRC/SEP/
