--- a/docutils.conf
+++ b/docutils.conf
@@ -18,4 +18,4 @@ embed-stylesheet: 0
 sep-home: https://github.com/AuburnSPaRC/SEP/blob/master
 
 # base URL for PEP references (no host so mirrors work):
-pep-base-url: https://github.com/AuburnSPaRC/SEP/
+pep-base-url: https://github.com/AuburnSPaRC/SEP/blob/master
